update mgmt server
