# app/mgmt/docs/swagger.yaml
@@ -36,6 +36,8 @@ definitions:
         type: string
       platform:
         type: string
+      podIp:
+        type: string
       userId:
         type: string
     type: object
@@ -147,6 +149,9 @@ definitions:
       role:
         description: 角色
         type: string
+      roleId:
+        description: 角色ID
+        type: string
       updateTime:
         description: 更新时间
         type: string
@@ -207,6 +212,18 @@ definitions:
         $ref: '#/definitions/pb.CommonReq'
     type: object
   pb.AddAppMgmtEmojiResp:
+    properties:
+      commonResp:
+        $ref: '#/definitions/pb.CommonResp'
+    type: object
+  pb.AddAppMgmtLinkReq:
+    properties:
+      appMgmtLink:
+        $ref: '#/definitions/pb.AppMgmtLink'
+      commonReq:
+        $ref: '#/definitions/pb.CommonReq'
+    type: object
+  pb.AddAppMgmtLinkResp:
     properties:
       commonResp:
         $ref: '#/definitions/pb.CommonResp'
@@ -376,6 +393,92 @@ definitions:
       commonResp:
         $ref: '#/definitions/pb.CommonResp'
     type: object
+  pb.AppLineConfig:
+    properties:
+      aesIv:
+        type: string
+      aesKey:
+        type: string
+      config:
+        type: string
+      storage:
+        $ref: '#/definitions/pb.AppLineConfig_Storage'
+    type: object
+  pb.AppLineConfig_Storage:
+    properties:
+      cos:
+        $ref: '#/definitions/pb.AppLineConfig_Storage_Cos'
+      kodo:
+        $ref: '#/definitions/pb.AppLineConfig_Storage_Kodo'
+      minio:
+        $ref: '#/definitions/pb.AppLineConfig_Storage_Minio'
+      objectId:
+        type: string
+      oss:
+        $ref: '#/definitions/pb.AppLineConfig_Storage_Oss'
+      type:
+        type: string
+    type: object
+  pb.AppLineConfig_Storage_Cos:
+    properties:
+      appId:
+        type: string
+      bucketName:
+        type: string
+      bucketUrl:
+        type: string
+      region:
+        type: string
+      secretId:
+        type: string
+      secretKey:
+        type: string
+    type: object
+  pb.AppLineConfig_Storage_Kodo:
+    properties:
+      accessKey:
+        type: string
+      bucketName:
+        type: string
+      bucketUrl:
+        type: string
+      region:
+        type: string
+      secretKey:
+        type: string
+      useHTTPS:
+        type: boolean
+    type: object
+  pb.AppLineConfig_Storage_Minio:
+    properties:
+      accessKeyId:
+        type: string
+      bucketName:
+        type: string
+      bucketUrl:
+        type: string
+      endpoint:
+        type: string
+      region:
+        type: string
+      secretAccessKey:
+        type: string
+      ssl:
+        type: boolean
+    type: object
+  pb.AppLineConfig_Storage_Oss:
+    properties:
+      accessKeyId:
+        type: string
+      accessKeySecret:
+        type: string
+      bucketName:
+        type: string
+      bucketUrl:
+        type: string
+      endpoint:
+        type: string
+    type: object
   pb.AppMgmtConfig:
     properties:
       group:
@@ -431,6 +534,25 @@ definitions:
       isEnable:
         type: boolean
       name:
+        type: string
+    type: object
+  pb.AppMgmtLink:
+    properties:
+      createdAt:
+        type: integer
+      createdAtStr:
+        type: string
+      icon:
+        type: string
+      id:
+        type: string
+      isEnable:
+        type: boolean
+      name:
+        type: string
+      sort:
+        type: integer
+      url:
         type: string
     type: object
   pb.AppMgmtNotice:
@@ -532,6 +654,8 @@ definitions:
       language:
         type: string
       osVersion:
+        type: string
+      packageId:
         type: string
       platform:
         type: string
@@ -636,6 +760,20 @@ definitions:
         type: array
     type: object
   pb.DeleteAppMgmtEmojiResp:
+    properties:
+      commonResp:
+        $ref: '#/definitions/pb.CommonResp'
+    type: object
+  pb.DeleteAppMgmtLinkReq:
+    properties:
+      commonReq:
+        $ref: '#/definitions/pb.CommonReq'
+      ids:
+        items:
+          type: string
+        type: array
+    type: object
+  pb.DeleteAppMgmtLinkResp:
     properties:
       commonResp:
         $ref: '#/definitions/pb.CommonResp'
@@ -923,6 +1061,28 @@ definitions:
       appMgmtEmojis:
         items:
           $ref: '#/definitions/pb.AppMgmtEmoji'
+        type: array
+      commonResp:
+        $ref: '#/definitions/pb.CommonResp'
+      total:
+        type: integer
+    type: object
+  pb.GetAllAppMgmtLinkReq:
+    properties:
+      commonReq:
+        $ref: '#/definitions/pb.CommonReq'
+      filter:
+        additionalProperties:
+          type: string
+        type: object
+      page:
+        $ref: '#/definitions/pb.Page'
+    type: object
+  pb.GetAllAppMgmtLinkResp:
+    properties:
+      appMgmtLinks:
+        items:
+          $ref: '#/definitions/pb.AppMgmtLink'
         type: array
       commonResp:
         $ref: '#/definitions/pb.CommonResp'
@@ -1331,6 +1491,13 @@ definitions:
           $ref: '#/definitions/pb.UserModel'
         type: array
     type: object
+  pb.GetAppLineConfigResp:
+    properties:
+      appLineConfig:
+        $ref: '#/definitions/pb.AppLineConfig'
+      commonResp:
+        $ref: '#/definitions/pb.CommonResp'
+    type: object
   pb.GetAppMgmtEmojiDetailReq:
     properties:
       commonReq:
@@ -1356,6 +1523,20 @@ definitions:
     properties:
       appMgmtEmojiGroup:
         $ref: '#/definitions/pb.AppMgmtEmojiGroup'
+      commonResp:
+        $ref: '#/definitions/pb.CommonResp'
+    type: object
+  pb.GetAppMgmtLinkDetailReq:
+    properties:
+      commonReq:
+        $ref: '#/definitions/pb.CommonReq'
+      id:
+        type: string
+    type: object
+  pb.GetAppMgmtLinkDetailResp:
+    properties:
+      appMgmtLink:
+        $ref: '#/definitions/pb.AppMgmtLink'
       commonResp:
         $ref: '#/definitions/pb.CommonResp'
     type: object
@@ -1700,6 +1881,10 @@ definitions:
     type: object
   pb.GetServerAllConfigResp_GroupRpcConfig:
     properties:
+      maxGroupCount:
+        type: integer
+      maxGroupMemberCount:
+        type: integer
       port:
         type: integer
     type: object
@@ -1753,6 +1938,14 @@ definitions:
     type: object
   pb.GetServerAllConfigResp_MsgRpcConfig:
     properties:
+      discovType:
+        type: string
+      endpoints:
+        items:
+          type: string
+        type: array
+      k8sNamespace:
+        type: string
       mobPush:
         $ref: '#/definitions/pb.GetServerAllConfigResp_MobPushConfig'
       port:
@@ -2205,6 +2398,8 @@ definitions:
         type: string
       role:
         type: string
+      roleId:
+        type: string
       updatedAt:
         type: integer
       updatedAtStr:
@@ -2336,6 +2531,18 @@ definitions:
       commonResp:
         $ref: '#/definitions/pb.CommonResp'
     type: object
+  pb.UpdateAppLineConfigReq:
+    properties:
+      appLineConfig:
+        $ref: '#/definitions/pb.AppLineConfig'
+      commonReq:
+        $ref: '#/definitions/pb.CommonReq'
+    type: object
+  pb.UpdateAppLineConfigResp:
+    properties:
+      commonResp:
+        $ref: '#/definitions/pb.CommonResp'
+    type: object
   pb.UpdateAppMgmtConfigReq:
     properties:
       appMgmtConfigs:
@@ -2370,6 +2577,18 @@ definitions:
         $ref: '#/definitions/pb.CommonReq'
     type: object
   pb.UpdateAppMgmtEmojiResp:
+    properties:
+      commonResp:
+        $ref: '#/definitions/pb.CommonResp'
+    type: object
+  pb.UpdateAppMgmtLinkReq:
+    properties:
+      appMgmtLink:
+        $ref: '#/definitions/pb.AppMgmtLink'
+      commonReq:
+        $ref: '#/definitions/pb.CommonReq'
+    type: object
+  pb.UpdateAppMgmtLinkResp:
     properties:
       commonResp:
         $ref: '#/definitions/pb.CommonResp'
@@ -2586,6 +2805,8 @@ definitions:
         type: string
       invitationCode:
         type: string
+      textMsg:
+        type: string
     type: object
   pb.UserInvitationCode:
     properties:
@@ -2600,6 +2821,9 @@ definitions:
       creator:
         type: string
       creatorType:
+        type: integer
+      defaultConvMode:
+        description: 默认会话模式 0:添加所有预设会话 1:只添加一个会话(轮询) 2:只添加一个会话(随机) 3:不添加会话
         type: integer
       isEnable:
         type: boolean
@@ -3092,6 +3316,38 @@ paths:
       summary: 新增用户ip白名单
       tags:
       - 用户ip白名单管理
+  /ms/add/link:
+    post:
+      consumes:
+      - application/json
+      description: 使用此接口新增app外链
+      parameters:
+      - description: 用户令牌
+        in: header
+        name: Token
+        required: true
+        type: string
+      - description: 用户ID
+        in: header
+        name: UserId
+        required: true
+        type: string
+      - description: 请求参数
+        in: body
+        name: object
+        required: true
+        schema:
+          $ref: '#/definitions/pb.AddAppMgmtLinkReq'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 响应数据
+          schema:
+            $ref: '#/definitions/pb.AddAppMgmtLinkResp'
+      summary: 新增app外链
+      tags:
+      - app外链管理
   /ms/add/menu:
     post:
       consumes:
@@ -3619,6 +3875,38 @@ paths:
       summary: 删除用户ip白名单
       tags:
       - 用户ip白名单管理
+  /ms/delete/link:
+    post:
+      consumes:
+      - application/json
+      description: 使用此接口删除app外链
+      parameters:
+      - description: 用户令牌
+        in: header
+        name: Token
+        required: true
+        type: string
+      - description: 用户ID
+        in: header
+        name: UserId
+        required: true
+        type: string
+      - description: 请求参数
+        in: body
+        name: object
+        required: true
+        schema:
+          $ref: '#/definitions/pb.DeleteAppMgmtLinkReq'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 响应数据
+          schema:
+            $ref: '#/definitions/pb.DeleteAppMgmtLinkResp'
+      summary: 删除app外链
+      tags:
+      - app外链管理
   /ms/delete/menu:
     post:
       consumes:
@@ -4541,6 +4829,70 @@ paths:
       summary: 获取全部用户ip白名单列表
       tags:
       - 用户ip白名单管理
+  /ms/get/link/detail:
+    post:
+      consumes:
+      - application/json
+      description: 使用此接口获取app外链详情
+      parameters:
+      - description: 用户令牌
+        in: header
+        name: Token
+        required: true
+        type: string
+      - description: 用户ID
+        in: header
+        name: UserId
+        required: true
+        type: string
+      - description: 请求参数
+        in: body
+        name: object
+        required: true
+        schema:
+          $ref: '#/definitions/pb.GetAppMgmtLinkDetailReq'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 响应数据
+          schema:
+            $ref: '#/definitions/pb.GetAppMgmtLinkDetailResp'
+      summary: 获取app外链详情
+      tags:
+      - app外链管理
+  /ms/get/link/list/all:
+    post:
+      consumes:
+      - application/json
+      description: 使用此接口获取全部app外链列表
+      parameters:
+      - description: 用户令牌
+        in: header
+        name: Token
+        required: true
+        type: string
+      - description: 用户ID
+        in: header
+        name: UserId
+        required: true
+        type: string
+      - description: 请求参数
+        in: body
+        name: object
+        required: true
+        schema:
+          $ref: '#/definitions/pb.GetAllAppMgmtLinkReq'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 响应数据
+          schema:
+            $ref: '#/definitions/pb.GetAllAppMgmtLinkResp'
+      summary: 获取全部app外链列表
+      tags:
+      - app外链管理
   /ms/get/loginlog/list/all:
     post:
       consumes:
@@ -5549,6 +5901,38 @@ paths:
       summary: 更新用户ip白名单
       tags:
       - 用户ip白名单管理
+  /ms/update/link:
+    post:
+      consumes:
+      - application/json
+      description: 使用此接口更新app外链
+      parameters:
+      - description: 用户令牌
+        in: header
+        name: Token
+        required: true
+        type: string
+      - description: 用户ID
+        in: header
+        name: UserId
+        required: true
+        type: string
+      - description: 请求参数
+        in: body
+        name: object
+        required: true
+        schema:
+          $ref: '#/definitions/pb.UpdateAppMgmtLinkReq'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 响应数据
+          schema:
+            $ref: '#/definitions/pb.UpdateAppMgmtLinkResp'
+      summary: 更新app外链
+      tags:
+      - app外链管理
   /ms/update/menu:
     post:
       consumes:
@@ -5773,6 +6157,27 @@ paths:
       summary: 更新appVPN
       tags:
       - appVPN管理
+  /server/get/app/line:
+    post:
+      consumes:
+      - application/json
+      description: 使用此接口获取app线路配置
+      parameters:
+      - description: 用户令牌
+        in: header
+        name: Token
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: app线路配置
+          schema:
+            $ref: '#/definitions/pb.GetAppLineConfigResp'
+      summary: 获取app线路配置
+      tags:
+      - 服务端相关接口
   /server/get/config/all:
     post:
       consumes:
@@ -5811,6 +6216,33 @@ paths:
           schema:
             type: string
       summary: 获取服务器在线人数
+      tags:
+      - 服务端相关接口
+  /server/update/app/line:
+    post:
+      consumes:
+      - application/json
+      description: 使用此接口更新app线路配置
+      parameters:
+      - description: 用户令牌
+        in: header
+        name: Token
+        required: true
+        type: string
+      - description: app线路配置
+        in: body
+        name: config
+        required: true
+        schema:
+          $ref: '#/definitions/pb.UpdateAppLineConfigReq'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 更新结果
+          schema:
+            $ref: '#/definitions/pb.UpdateAppLineConfigResp'
+      summary: 更新app线路配置
       tags:
       - 服务端相关接口
   /server/update/config:
