# app/mgmt/internal/handler/serverhandler/config.go
@@ -53,3 +53,50 @@ func (r *ServerHandler) updateConfig(ctx *gin.Context) {
 	}
 	handler.ReturnOk(ctx, resp)
 }
+
+// appLine 获取app线路配置
+// @Summary 获取app线路配置
+// @Description 使用此接口获取app线路配置
+// @Tags 服务端相关接口
+// @Accept application/json
+// @Produce application/json
+// @Param Token header string true "用户令牌"
+// @Success 200 {object} pb.GetAppLineConfigResp "app线路配置"
+// @Router /server/get/app/line [post]
+func (r *ServerHandler) appLine(ctx *gin.Context) {
+	in := &pb.GetAppLineConfigReq{}
+	if err := ctx.ShouldBind(in); err != nil {
+		ctx.AbortWithStatus(400)
+		return
+	}
+	resp, err := logic.NewGetAppLineConfigLogic(ctx, r.svcCtx).GetAppLineConfig(in)
+	if err != nil {
+		ctx.AbortWithStatus(500)
+		return
+	}
+	handler.ReturnOk(ctx, resp)
+}
+
+// updateAppLine 更新app线路配置
+// @Summary 更新app线路配置
+// @Description 使用此接口更新app线路配置
+// @Tags 服务端相关接口
+// @Accept application/json
+// @Produce application/json
+// @Param Token header string true "用户令牌"
+// @Param config body pb.UpdateAppLineConfigReq true "app线路配置"
+// @Success 200 {object} pb.UpdateAppLineConfigResp "更新结果"
+// @Router /server/update/app/line [post]
+func (r *ServerHandler) updateAppLine(ctx *gin.Context) {
+	in := &pb.UpdateAppLineConfigReq{}
+	if err := ctx.ShouldBind(in); err != nil {
+		ctx.AbortWithStatus(400)
+		return
+	}
+	resp, err := logic.NewUpdateAppLineConfigLogic(ctx, r.svcCtx).UpdateAppLineConfig(in)
+	if err != nil {
+		ctx.AbortWithStatus(500)
+		return
+	}
+	handler.ReturnOk(ctx, resp)
+}
