# app/mgmt/internal/logic/getServerAllConfigLogic.go
@@ -78,12 +78,19 @@ func (l *GetServerAllConfigLogic) GetServerAllConfig(in *pb.GetServerAllConfigRe
 				ReceiverQueueSize: config.MsgRpc.Pulsar.ReceiverQueueSize,
 				ProducerTimeout:   config.MsgRpc.Pulsar.ProducerTimeout,
 			},
+			DiscovType:   config.MsgRpc.DiscovType,
+			K8SNamespace: config.MsgRpc.K8sNamespace,
+			Endpoints:    config.MsgRpc.Endpoints,
 		},
 		UserRpc:     &pb.GetServerAllConfigResp_UserRpcConfig{Port: config.UserRpc.Port},
 		RelationRpc: &pb.GetServerAllConfigResp_RelationRpcConfig{Port: config.RelationRpc.Port},
-		GroupRpc:    &pb.GetServerAllConfigResp_GroupRpcConfig{Port: config.GroupRpc.Port},
-		NoticeRpc:   &pb.GetServerAllConfigResp_NoticeRpcConfig{Port: config.NoticeRpc.Port},
-		AppMgmtRpc:  &pb.GetServerAllConfigResp_AppMgmtRpcConfig{Port: config.AppMgmtRpc.Port},
+		GroupRpc: &pb.GetServerAllConfigResp_GroupRpcConfig{
+			Port:                config.GroupRpc.Port,
+			MaxGroupCount:       config.GroupRpc.MaxGroupCount,
+			MaxGroupMemberCount: config.GroupRpc.MaxGroupMemberCount,
+		},
+		NoticeRpc:  &pb.GetServerAllConfigResp_NoticeRpcConfig{Port: config.NoticeRpc.Port},
+		AppMgmtRpc: &pb.GetServerAllConfigResp_AppMgmtRpcConfig{Port: config.AppMgmtRpc.Port},
 		Mgmt: &pb.GetServerAllConfigResp_MgmtConfig{
 			RpcPort:        config.Mgmt.RpcPort,
 			HttpPort:       config.Mgmt.HttpPort,
